[tool.poetry]
name = "random-quote-generator-6886754"
packages = [
    { include = "random_quote_generator" },
]
version = "0.1.0"
description = "my random quote generaror"
authors = ["Mfana Ronald Conco <ronald.conco@mlankatech.co.za>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
bandit = "^1.7.4"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
